chore: Update link

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<code
 						><a
 							class="anchor link"
-							href="https://github.com/scop/bash-completion"
+							href="https://www.gnu.org/software/bash/manual/html_node/Programmable-Completion.html"
 							target="_blank"
 							>bash-completion</a
 						></code
@@ -243,14 +243,7 @@
 							></code
 						>
 						and
-						<code
-							><a
-								class="anchor link"
-								href="https://nim-lang.org/"
-								target="_blank"
-								>Nim</a
-							></code
-						>.
+						<code>Nim</code>.
 					</div>
 				</div>
 			</footer>
