update: Rework banner, improve logo

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<title>nodecliac</title>
@@ -11,12 +12,13 @@
 			name="viewport"
 			content="width=device-width,initial-scale=1,shrink-to-fit=no"
 		/>
-		<link
-			href="https://fonts.googleapis.com/css?family=Hind:300,400,600&amp;display=swap"
-			rel="stylesheet"
-		/>
 		<link href="./website/css/sanitize.css" rel="stylesheet" />
 		<link href="./website/css/styles.css" rel="stylesheet" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Hind:wght@300;400;600&family=Rubik:wght@300;500&family=Roboto:wght@700&family=Roboto:wght@700&display=swap"
+			rel="stylesheet"
+			async
+		/>
 	</head>
 
 	<body>
@@ -32,6 +34,7 @@
 							><a
 								href="https://github.com/cgabriel5/nodecliac"
 								target="_blank"
+								rel="noreferrer"
 								class="link"
 								>GitHub</a
 							></span
@@ -43,6 +46,7 @@
 							><a
 								href="https://github.com/cgabriel5/nodecliac/blob/master/docs/packages/creating.md"
 								target="_blank"
+								rel="noreferrer"
 								class="link"
 								>Create Package</a
 							></span
@@ -53,20 +57,50 @@
 		</header>
 		<div class="topic-cont">
 			<div class="topic">
-				<div class="tags-cont">
+				<div class="topic-logo">
+					<div class="tabkey unselectable none">
+						<div class="tabkey-text">tab</div>
+					</div>
+					<div class="logo-wrapper">
+						<div class="logo-top-face-cont">
+							<div class="logo-top-face">
+								<div class="logo-top-face-text">
+									$<span class="blink-caret">_</span>
+								</div>
+							</div>
+						</div>
+						<div class="logo-left-face"></div>
+						<div class="logo-right-face">
+							<div class="logo-right-face-text">
+								tab
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="text-cont">
+					<div class="topic-title">
+						<span class="topic-title-text bold4">nodecliac</span>
+						<div class="topic-title-side">
+							/
+							<span class="bold4">node</span>-<span class="bold4"
+								>cli</span
+							>-<span class="bold4">a</span
+							><span class="dim">uto</span>-<span class="bold4"
+								>c</span
+							><span class="dim">ompletion</span>
+						</div>
+					</div>
+					<div class="topic-description">
+						Easy Bash completion for CLI programs
+					</div>
+				</div>
+
+				<div class="tags-cont none">
 					<div class="topic-tag"><span>cli-tool</span></div>
 					<div class="topic-tag"><span>bash-completion</span></div>
 					<div class="topic-tag"><span>macos</span></div>
 					<div class="topic-tag"><span>linux</span></div>
-				</div>
-				<div class="topic-title">
-					<span class="bold">node</span>-<span class="bold">cli</span
-					>-<span class="bold">a</span
-					><span class="dim">uto</span>-<span class="bold">c</span
-					><span class="dim">ompletion</span>
-				</div>
-				<div class="topic-description">
-					Easy Bash completion for CLI programs
 				</div>
 			</div>
 		</div>
@@ -80,7 +114,7 @@
 				<div class="section-list">
 					<pre
 						class="code-block-cont"
-					><code class="code-block"><span class="grayed unselectable">$</span><span class="unselectable"> </span><span class="sh-command">sudo</span> curl <span class="italic">-Ls</span> https://raw.githubusercontent.com/cgabriel5/nodecliac/master/install <span class="operator">|</span> <span class="sh-command">bash</span> <span class="italic">-s</span> <span class="operator">&&</span> <span class="sh-command">source</span> <span class="operator">~</span>/.bashrc</code></pre>
+					><code class="code-block"><span class="grayed unselectable">$</span><span class="unselectable"> </span><span class="sh-command">sudo</span> curl <span class="italic">-Ls</span> https://raw.githubusercontent.com/cgabriel5/nodecliac/master/install <span class="operator">|</span> <span class="sh-command">bash</span> <span class="italic">-s</span> <span class="operator">&amp;&amp;</span> <span class="sh-command">source</span> <span class="operator">~</span>/.bashrc</code></pre>
 				</div>
 			</section>
 
@@ -98,6 +132,7 @@
 							class="anchor link"
 							href="https://www.gnu.org/software/bash/manual/html_node/Programmable-Completion.html"
 							target="_blank"
+							rel="noreferrer"
 							>bash-completion</a
 						></code
 					>
@@ -108,6 +143,7 @@
 						class="anchor link"
 						href="https://www.gnu.org/software/bash/"
 						target="_blank"
+						rel="noreferrer"
 						>Bash</a
 					>
 					to implement it puts some off from using it.
@@ -124,6 +160,7 @@
 							class="anchor link"
 							href="https://github.com/cgabriel5/nodecliac#syntax"
 							target="_blank"
+							rel="noreferrer"
 							>map</a
 						></span
 					>
@@ -146,6 +183,7 @@
 							class="anchor link"
 							href="https://www.perl.org/"
 							target="_blank"
+							rel="noreferrer"
 							>Perl</a
 						></code
 					>
@@ -155,6 +193,7 @@
 							class="anchor link"
 							href="https://www.python.org/"
 							target="_blank"
+							rel="noreferrer"
 							>Python</a
 						></code
 					>,
@@ -164,6 +203,7 @@
 							class="anchor link"
 							href="https://www.ruby-lang.org/en/"
 							target="_blank"
+							rel="noreferrer"
 							>Ruby</a
 						></code
 					>
@@ -172,6 +212,7 @@
 						class="anchor link"
 						href="https://en.wikipedia.org/wiki/Scripting_language#Glue_languages"
 						target="_blank"
+						rel="noreferrer"
 						>glue code</a
 					>
 					to tie it all together.
@@ -193,6 +234,7 @@
 						class="a-button"
 						href="https://github.com/cgabriel5/nodecliac#nodecliac"
 						target="_blank"
+						rel="noreferrer"
 						>View full docs</a
 					>
 				</div>
@@ -214,6 +256,7 @@
 								class="anchor link"
 								href="https://www.gnu.org/software/bash/"
 								target="_blank"
+								rel="noreferrer"
 								>Bash</a
 							></code
 						>,
@@ -222,6 +265,7 @@
 								class="anchor link"
 								href="https://www.perl.org/"
 								target="_blank"
+								rel="noreferrer"
 								>Perl</a
 							></code
 						>, and
@@ -230,6 +274,7 @@
 								class="anchor link"
 								href="https://nim-lang.org/"
 								target="_blank"
+								rel="noreferrer"
 								>Nim</a
 							></code
 						>
@@ -239,6 +284,7 @@
 								class="anchor link"
 								href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
 								target="_blank"
+								rel="noreferrer"
 								>JavaScript</a
 							></code
 						>
