fix: Correct Google font link embed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<link href="./website/css/sanitize.css" rel="stylesheet" />
 		<link href="./website/css/styles.css" rel="stylesheet" />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Hind:wght@300;400;600&family=Rubik:wght@300;500&family=Roboto:wght@700&family=Roboto:wght@700&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Hind:wght@300;400;600&family=Rubik:wght@300;500&family=Roboto:wght@700&family=Roboto+Mono:wght@700&display=swap"
 			rel="stylesheet"
 			async
 		/>
