chore: Add github star count button to landing

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 			href="https://fonts.googleapis.com/css2?family=Hind:wght@300;400;600&family=Rubik:wght@300;500&family=Roboto:wght@700&family=Roboto+Mono:wght@700&display=swap"
 			rel="stylesheet"
 			async
+			defer
 		/>
+		<script async defer src="https://buttons.github.io/buttons.js"></script>
 	</head>
 
 	<body>
@@ -30,6 +32,18 @@
 
 				<div class="nav-right-links">
 					<div class="nav-item">
+						<!-- [https://buttons.github.io/] -->
+						<a
+							class="github-button"
+							href="https://github.com/cgabriel5/nodecliac"
+							data-color-scheme="no-preference: light; light: light; dark: light;"
+							data-icon="octicon-star"
+							data-show-count="true"
+							aria-label="Star cgabriel5/nodecliac on GitHub"
+							>Star</a
+						>
+					</div>
+					<div class="nav-item none">
 						<span
 							><a
 								href="https://github.com/cgabriel5/nodecliac"
