fix: Move eq-sign out of flag span

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ tojson format --source=&lt;file&gt;</code></pre>
 	--<span class="flag-name">version</span>
 ]
 <span class="italic">tojson<span class="operator">.</span>make</span> = [
-	--<span class="flag-name">source=</span>
+	--<span class="flag-name">source</span>=
 ]
 <span class="italic">tojson<span class="operator">.</span>format</span> = [
 	--<span class="flag-name">source</span>=
