chore: Update installer command in landing page

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 				<div class="section-list">
 					<pre
 						class="code-block-cont"
-					><code class="code-block"><span class="grayed unselectable">$</span><span class="unselectable"> </span><span class="sh-command">sudo</span> curl <span class="italic">-Ls</span> git.io/nodecliac <span class="operator">|</span> <span class="sh-command">bash</span> <span class="italic">-s</span> <span class="operator">&amp;&amp;</span> <span class="sh-command">source</span> <span class="operator">~</span>/.bashrc</code></pre>
+					><code class="code-block"><span class="grayed unselectable">$</span> bash <(curl <span class="italic">-Ls</span> git.io/nodecliac) <span class="operator">&amp;&amp;</span> <span class="sh-command">source</span> <span class="operator">~</span>/.bashrc</code></pre>
 				</div>
 			</section>
 
